# SJB_NN

./: README.md  main.cpp  mmap.h  mnist_definitions.h  mnist_loader.h  numpy_loader.cpp
1_new_nn/: CMakeLists.txt  mmap.cpp  sjb_train.py
2_cpu_optimizations/: CMakeLists.txt
2_cpu_optimizations/mnist/: CMakeLists.txt  mmap.cpp  mnist_loader.cpp  numpy_loader.cpp
2_cpu_optimizations/mnist/include/: mmap.h  mnist_definitions.h  mnist_loader.h  numpy_loader.h
2_cpu_optimizations/mnist_eigen/: CMakeLists.txt  loaders.cpp  loaders.h  main.cpp
2_cpu_optimizations/mnist_mkl/: CMakeLists.txt  loaders.cpp  loaders.h  main.cpp  mkl_wrapper.cpp  mkl_wrapper.h
2_cpu_optimizations/python_reference/: benchmark_inference.py  sjb_nn.py  sjb_train.py
mnist_fashion/: README.md  mnist_loader.cpp  numpy_loader.h  sjb_nn.py
